--- a/inspector-oneroster/pom.xml
+++ b/inspector-oneroster/pom.xml
@@ -5,7 +5,8 @@
 	<parent>
 		<groupId>org.1edtech</groupId>
 		<artifactId>inspector</artifactId>
-		<version>${revision}</version>
+	    <!-- <version>${revision}</version>  -->
+	    <version>0.6.1</version>
 	</parent>
 	<artifactId>inspector-oneroster</artifactId>
 
@@ -31,13 +32,6 @@
 					<artifactId>Saxon-HE</artifactId>
 				</exclusion>
 			</exclusions>			
-		</dependency>
-		<dependency>
-			<groupId>org.1edtech</groupId>
-			<artifactId>inspector-core</artifactId>
-			<classifier>tests</classifier>
-			<type>test-jar</type>
-			<scope>test</scope>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
