--- a/inspector-vc/pom.xml
+++ b/inspector-vc/pom.xml
@@ -11,10 +11,10 @@
 			<groupId>org.1edtech</groupId>
 			<artifactId>inspector-core</artifactId>			
 		</dependency>
-    <dependency>
+		<dependency>
 			<groupId>org.bouncycastle</groupId>
-			<artifactId>bcpkix-jdk15on</artifactId>
-			<version>1.58</version>
+			<artifactId>bcprov-jdk15to18</artifactId>
+			<version>1.65</version>
 		</dependency>
 		<dependency>
 			<groupId>com.auth0</groupId>
