--- a/inspector-vc/pom.xml
+++ b/inspector-vc/pom.xml
@@ -35,6 +35,34 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
 			<version>5.0.12.RELEASE</version>
-		</dependency>		
+		</dependency>	
+		<!-- https://mvnrepository.com/artifact/com.apicatalog/titanium-json-ld  -->
+		<dependency>
+			<groupId>com.apicatalog</groupId>
+			<artifactId>titanium-json-ld</artifactId>
+			<version>1.3.1</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.setl/rdf-urdna -->
+		<!-- https://github.com/setl/rdf-urdna -->
+		<dependency>
+			<groupId>io.setl</groupId>
+			<artifactId>rdf-urdna</artifactId>
+			<version>1.1</version>
+			<exclusions>
+				<exclusion>
+					<groupId>junit</groupId>
+					<artifactId>junit</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>com.apicatalog</groupId>
+					<artifactId>titanium-json-ld</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>	
+		<dependency>
+			<groupId>org.glassfish</groupId>
+			<artifactId>jakarta.json</artifactId>
+			<version>2.0.1</version>
+		</dependency>
 	</dependencies>
 </project>
