--- a/inspector-vc/pom.xml
+++ b/inspector-vc/pom.xml
@@ -35,7 +35,14 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
 			<version>5.0.12.RELEASE</version>
-		</dependency>	
+		</dependency>
+		<dependency>
+			<groupId>com.google</groupId>
+			<artifactId>bitcoinj</artifactId>
+			<version>0.11.3</version>
+		</dependency>
+		<!-- Thanks for using https://jar-download.com -->
+			
 		<!-- https://mvnrepository.com/artifact/com.apicatalog/titanium-json-ld  -->
 		<dependency>
 			<groupId>com.apicatalog</groupId>
