--- a/inspector-vc/pom.xml
+++ b/inspector-vc/pom.xml
@@ -1,20 +1,17 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.1edtech</groupId>
-    <artifactId>inspector</artifactId>
-    <version>0.9.2</version>
-  </parent>
-  <artifactId>inspector-vc</artifactId>
-  <dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.1edtech</groupId>
+		<artifactId>inspector</artifactId>
+		<version>0.9.2</version>
+	</parent>
+	<artifactId>inspector-vc</artifactId>
+	<dependencies>
 		<dependency>
 			<groupId>org.1edtech</groupId>
-			<artifactId>inspector-core</artifactId>			
-		</dependency>
-		<dependency>
-			<groupId>org.bouncycastle</groupId>
-			<artifactId>bcprov-jdk15to18</artifactId>
-			<version>1.65</version>
+			<artifactId>inspector-core</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.auth0</groupId>
@@ -32,17 +29,10 @@
 			<version>3.10.3</version>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-core</artifactId>
-			<version>5.0.12.RELEASE</version>
+			<groupId>com.apicatalog</groupId>
+			<artifactId>iron-verifiable-credentials-jre8</artifactId>
+			<version>0.7.0</version>
 		</dependency>
-		<dependency>
-			<groupId>com.google</groupId>
-			<artifactId>bitcoinj</artifactId>
-			<version>0.11.3</version>
-		</dependency>
-		<!-- Thanks for using https://jar-download.com -->
-			
 		<!-- https://mvnrepository.com/artifact/com.apicatalog/titanium-json-ld  -->
 		<dependency>
 			<groupId>com.apicatalog</groupId>
@@ -50,7 +40,7 @@
 			<version>1.3.1</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/io.setl/rdf-urdna -->
-		<!-- https://github.com/setl/rdf-urdna -->
+		<!-- https://github.com/setl/rdf-urdna 
 		<dependency>
 			<groupId>io.setl</groupId>
 			<artifactId>rdf-urdna</artifactId>
@@ -65,7 +55,8 @@
 					<artifactId>titanium-json-ld</artifactId>
 				</exclusion>
 			</exclusions>
-		</dependency>	
+		</dependency>
+		-->
 		<dependency>
 			<groupId>org.glassfish</groupId>
 			<artifactId>jakarta.json</artifactId>
