--- a/inspector-vc/pom.xml
+++ b/inspector-vc/pom.xml
@@ -41,6 +41,12 @@
 			<artifactId>titanium-json-ld</artifactId>
 			<version>1.3.1</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.13</version>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/io.setl/rdf-urdna -->
 		<!-- https://github.com/setl/rdf-urdna 
 		<dependency>
