--- a/inspector-vc/pom.xml
+++ b/inspector-vc/pom.xml
@@ -12,7 +12,7 @@
 		<dependency>
 			<groupId>org.1edtech</groupId>
 			<artifactId>inspector-core</artifactId>
-		</dependency>	
+		</dependency>
 		<dependency>
 			<groupId>com.auth0</groupId>
 			<artifactId>auth0</artifactId>
@@ -28,14 +28,30 @@
 			<artifactId>java-jwt</artifactId>
 			<version>3.19.2</version>
 		</dependency>
+
+		<!--  https://repo.danubetech.com/#browse/browse:maven-public:com%2Fdanubetech%2Fverifiable-credentials-java%2F1.1-SNAPSHOT%2F1.1-20220818.090353-4 -->
+		<dependency>
+			<groupId>com.danubetech</groupId>
+			<artifactId>verifiable-credentials-java</artifactId>
+			<!--  <version>1.1-20220818.090353-4</version>  -->
+			<version>1.1-SNAPSHOT</version>
+		</dependency>
+		
+		<!--  https://repo.danubetech.com/#browse/browse:maven-public:com%2Fdanubetech%2Fkey-formats-java%2F1.6-SNAPSHOT -->
+		<dependency>
+			<groupId>com.danubetech</groupId>
+			<artifactId>key-formats-java</artifactId>
+			<version>2.1-SNAPSHOT</version>
+		</dependency>
+
 		<!-- https://github.com/filip26/iron-verifiable-credentials -->
 		<dependency>
 			<groupId>com.apicatalog</groupId>
 			<artifactId>iron-verifiable-credentials-jre8</artifactId>
 			<version>0.7.0</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/com.apicatalog/titanium-json-ld  -->
-		<!--  https://github.com/filip26/titanium-json-ld -->
+		<!-- https://mvnrepository.com/artifact/com.apicatalog/titanium-json-ld -->
+		<!-- https://github.com/filip26/titanium-json-ld -->
 		<dependency>
 			<groupId>com.apicatalog</groupId>
 			<artifactId>titanium-json-ld</artifactId>
@@ -48,27 +64,22 @@
 			<version>4.5.13</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/io.setl/rdf-urdna -->
-		<!-- https://github.com/setl/rdf-urdna 
-		<dependency>
-			<groupId>io.setl</groupId>
-			<artifactId>rdf-urdna</artifactId>
-			<version>1.1</version>
-			<exclusions>
-				<exclusion>
-					<groupId>junit</groupId>
-					<artifactId>junit</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>com.apicatalog</groupId>
-					<artifactId>titanium-json-ld</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		-->
+		<!-- https://github.com/setl/rdf-urdna <dependency> <groupId>io.setl</groupId> 
+			<artifactId>rdf-urdna</artifactId> <version>1.1</version> <exclusions> <exclusion> 
+			<groupId>junit</groupId> <artifactId>junit</artifactId> </exclusion> <exclusion> 
+			<groupId>com.apicatalog</groupId> <artifactId>titanium-json-ld</artifactId> 
+			</exclusion> </exclusions> </dependency> -->
 		<dependency>
 			<groupId>org.glassfish</groupId>
 			<artifactId>jakarta.json</artifactId>
 			<version>2.0.1</version>
 		</dependency>
 	</dependencies>
+
+	<repositories>
+		<repository>
+			<id>danubetech-maven-public</id>
+			<url>https://repo.danubetech.com/repository/maven-public/</url>
+		</repository>
+	</repositories>
 </project>
