--- a/inspector-vc/pom.xml
+++ b/inspector-vc/pom.xml
@@ -4,8 +4,8 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.1edtech</groupId>
-		<artifactId>inspector</artifactId>
-		<version>0.9.12</version>
+		<artifactId>vc-public-validator</artifactId>
+		<version>1.0.0</version>
 	</parent>
 	<artifactId>inspector-vc</artifactId>
 	<dependencies>
@@ -63,23 +63,10 @@
 			<artifactId>httpclient</artifactId>
 			<version>4.5.13</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/io.setl/rdf-urdna -->
-		<!-- https://github.com/setl/rdf-urdna <dependency> <groupId>io.setl</groupId>
-			<artifactId>rdf-urdna</artifactId> <version>1.1</version> <exclusions> <exclusion>
-			<groupId>junit</groupId> <artifactId>junit</artifactId> </exclusion> <exclusion>
-			<groupId>com.apicatalog</groupId> <artifactId>titanium-json-ld</artifactId>
-			</exclusion> </exclusions> </dependency> -->
 		<dependency>
 			<groupId>org.glassfish</groupId>
 			<artifactId>jakarta.json</artifactId>
 			<version>2.0.1</version>
 		</dependency>
 	</dependencies>
-
-	<repositories>
-		<repository>
-			<id>danubetech-maven-public</id>
-			<url>https://repo.danubetech.com/repository/maven-public/</url>
-		</repository>
-	</repositories>
 </project>
