--- a/inspector-vc/pom.xml
+++ b/inspector-vc/pom.xml
@@ -68,5 +68,10 @@
 			<artifactId>jakarta.json</artifactId>
 			<version>2.0.1</version>
 		</dependency>
+		<dependency>
+			<groupId>decentralized-identity</groupId>
+			<artifactId>uni-resolver-client</artifactId>
+			<version>0.5.0</version>
+		</dependency>
 	</dependencies>
 </project>
