--- a/inspector-vc/pom.xml
+++ b/inspector-vc/pom.xml
@@ -47,15 +47,22 @@
 		<!-- https://github.com/filip26/iron-verifiable-credentials -->
 		<dependency>
 			<groupId>com.apicatalog</groupId>
-			<artifactId>iron-verifiable-credentials-jre8</artifactId>
-			<version>0.7.0</version>
+			<artifactId>iron-verifiable-credentials</artifactId>
+			<version>0.14.0</version>
+		</dependency>
+
+		<!-- https://github.com/filip26/iron-eddsa-rdfc-2022 -->
+		<dependency>
+			<groupId>com.apicatalog</groupId>
+			<artifactId>iron-eddsa-rdfc-2022</artifactId>
+			<version>0.14.0</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.apicatalog/titanium-json-ld -->
 		<!-- https://github.com/filip26/titanium-json-ld -->
 		<dependency>
 			<groupId>com.apicatalog</groupId>
 			<artifactId>titanium-json-ld</artifactId>
-			<version>1.3.1</version>
+			<version>1.4.0</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
 		<dependency>
