--- a/inspector-vc/pom.xml
+++ b/inspector-vc/pom.xml
@@ -8,6 +8,11 @@
 		<version>1.3.7</version>
 	</parent>
 	<artifactId>inspector-vc</artifactId>
+
+	<properties>
+		<web3j.version>4.14.0</web3j.version>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.1edtech</groupId>
@@ -72,6 +77,27 @@
 			<groupId>org.glassfish</groupId>
 			<artifactId>jakarta.json</artifactId>
 			<version>2.0.1</version>
+		</dependency>
+
+		<!-- Web3j core -->
+		<dependency>
+			<groupId>org.web3j</groupId>
+			<artifactId>core</artifactId>
+			<version>${web3j.version}</version>
+		</dependency>
+
+		<!-- Web3j crypto utils -->
+		<dependency>
+			<groupId>org.web3j</groupId>
+			<artifactId>crypto</artifactId>
+			<version>${web3j.version}</version>
+		</dependency>
+
+		<!-- Bouncy Castle -->
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcprov-jdk18on</artifactId>
+			<version>1.80</version>
 		</dependency>
 	</dependencies>
 </project>
