--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
     <log4j.version>2.17.2</log4j.version>
     <skipTests>false</skipTests>
     <public.core.version>1.1.4</public.core.version>
+		<web3j.version>4.14.0</web3j.version>
   </properties>
 
   <modules>
@@ -311,6 +312,26 @@
         <scope>test</scope>
       </dependency>
 
+      <!-- Web3j core -->
+      <dependency>
+        <groupId>org.web3j</groupId>
+        <artifactId>core</artifactId>
+        <version>${web3j.version}</version>
+      </dependency>
+
+      <!-- Web3j crypto utils -->
+      <dependency>
+        <groupId>org.web3j</groupId>
+        <artifactId>crypto</artifactId>
+        <version>${web3j.version}</version>
+      </dependency>
+
+      <!-- Bouncy Castle -->
+      <dependency>
+        <groupId>org.bouncycastle</groupId>
+        <artifactId>bcprov-jdk18on</artifactId>
+        <version>1.80</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
