--- a/inspector-vc/pom.xml
+++ b/inspector-vc/pom.xml
@@ -37,10 +37,22 @@
 		</dependency>
 
 		<!-- https://github.com/filip26/iron-eddsa-rdfc-2022 -->
-		<dependency>
+		<!-- <dependency>
 			<groupId>com.apicatalog</groupId>
 			<artifactId>iron-eddsa-rdfc-2022</artifactId>
 			<version>0.14.0</version>
+		</dependency> -->
+		<!-- https://github.com/filip26/copper-multibase -->
+		<dependency>
+			<groupId>com.apicatalog</groupId>
+    		<artifactId>copper-multibase</artifactId>
+    		<version>1.0.0</version>
+		</dependency>
+		<!-- https://github.com/filip26/copper-multicodec -->
+		<dependency>
+			<groupId>com.apicatalog</groupId>
+    		<artifactId>copper-multicodec</artifactId>
+    		<version>1.1.0</version>
 		</dependency>
 
 		<!-- universal did resolver client -->
