--- a/inspector-vc-web/pom.xml
+++ b/inspector-vc-web/pom.xml
@@ -102,6 +102,7 @@
 	</dependencyManagement>
 
 	<build>
+		<finalName>inspector-vc-web</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
