--- a/inspector-vc-web/pom.xml
+++ b/inspector-vc-web/pom.xml
@@ -30,6 +30,12 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.1edtech</groupId>
+			<artifactId>inspector-clr</artifactId>
+			<scope>provided</scope>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
