--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <log4j.version>2.17.2</log4j.version>
     <skipTests>false</skipTests>
 		<web3j.version>4.13.0</web3j.version>
-    <public.core.version>1.1.10</public.core.version>
+    <public.core.version>1.1.11</public.core.version>
     <com.danubetech.verifiable.credentials.version>1.18.0</com.danubetech.verifiable.credentials.version>
     <cbor-java.version>0.9</cbor-java.version>
     <!-- <iron.verifiable.credentials.version>0.14.0</iron.verifiable.credentials.version> -->
@@ -356,6 +356,18 @@
         <groupId>co.nstant.in</groupId>
         <artifactId>cbor</artifactId>
         <version>${cbor-java.version}</version>
+      </dependency>
+
+      <!-- Force consistent OkHttp version to avoid method signature conflicts -->
+      <dependency>
+        <groupId>com.squareup.okhttp3</groupId>
+        <artifactId>okhttp</artifactId>
+        <version>4.9.3</version>
+      </dependency>
+      <dependency>
+        <groupId>com.squareup.okhttp3</groupId>
+        <artifactId>logging-interceptor</artifactId>
+        <version>4.9.3</version>
       </dependency>
 
     </dependencies>
