Update application.properties: ensure file size limits are set to 200MB

--- a/inspector-vc-web/src/main/resources/application.properties
+++ b/inspector-vc-web/src/main/resources/application.properties
@@ -6,3 +6,7 @@ app.version=1.0.0
 spring.jackson.serialization.INDENT_OUTPUT=true
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.force-response=true
+
+# increase file size limit to 200Mb
+spring.servlet.multipart.max-file-size=200MB
+spring.servlet.multipart.max-request-size=200MB
